# MLChess-FHE

./: .gitignore  README.md  TUTORIAL.md  pyproject.toml  tutorial.ipynb
analysis/: chess.ipynb  model.ipynb
chess_model/: dataset.py  main.py  model.py  play.py  utils.py
data/: README.md  analyse.ipynb  parser.py
model/: model  model_weights.pt
