[tool.poetry]
name = "playchessfhe"
version = "0.1.0"
description = ""
authors = ["Regis GRAPTIN"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.5"
chess = "^1.9.4"
pandas = "^2.0.1"
pgn2data = "^0.0.8"
torch = "1.13.1"
scikit-learn = "^1.1.3"
pytorch-lightning = "^2.0.2"
lightning = {extras = ["extra"], version = ">=1.0.2,<2.0.0"}
concrete-ml = "^1.0.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"
tornado = "6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
